--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,7 @@
 <body>
     <div class="overlay" id="overlay"></div>
 
+    /* these should be imports not includes - lets switch to react */
     <%- include('./partials/header') %>
     <%- include('./partials/walletConnection') %>
 
